<resources>
    <string name="app_name">LiNجuiNe</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="email_or_phone_number">Email or Phone number</string>
    <string name="password">Password</string>
    <string name="forget_password"><![CDATA[Forget password ?]]></string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="reset_password">Reset Password</string>

    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_my_location">Get My Address</string>
    <string name="make_an_order">Make An Order</string>
    <string name="title_activity_admin_map">Map</string>
</resources>
