<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/backGround"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:src="@drawable/logo2" />

                <EditText
                    android:id="@+id/mMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/edit_text_shap"
                    android:hint="@string/email_or_phone_number"
                    android:padding="16dp"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintcolor"
                    android:textSize="15dp" />


                <EditText
                    android:id="@+id/mName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/edit_text_shap"
                    android:hint="@string/name"
                    android:padding="16dp"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintcolor"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/mPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/edit_text_shap"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:padding="16dp"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintcolor"
                    android:textSize="15dp" />

                <EditText
                    android:id="@+id/mPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/edit_text_shap"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintcolor"
                    android:textSize="15dp" />


                <Button
                    android:id="@+id/mSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="15dp"
                    android:background="@drawable/singup_shap"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp" />


            </LinearLayout>
            <ProgressBar
                android:id="@+id/simpleProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/pop_up_shap"
                android:padding="15dp"
                android:theme="@style/AppCompatAlertDialogStyle"
                android:visibility="invisible" />
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>